welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:16: error: not found: value couleurs
    couleurs(i)=getCouleurSol()
    ^Array1:24: error: not found: value couleurs
    setCouleurBrosse(couleurs(k))
                     ^